Update on November 17th

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
-$color: steelblue;
+$primary: SeaGreen;
+$body-bg: Honeydew;
 
-.my-flix {
-  color: $color;
-}
+@use 'bootstrap/scss/bootstrap' as *;
+@use 'mixins/banner' as *;
+
+
