--- a/src/components/login-view/login-view.scss
+++ b/src/components/login-view/login-view.scss
@@ -1,2 +1,2 @@
 // src/components/login-view/login-view.scss
-// @import "../../styles/auth-styles"; // Import shared auth styles
+@import "../../styles/auth-styles"; // Import shared auth styles
