--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,4 +1,7 @@
 img.card-img-top {
-  width: 150px;  // Set the width of the image
-  height: auto;  // Keep the aspect ratio intact
+  object-fit: cover;
+  width: 100%; /* Adjust this based on your layout */
+  height: 200px; /* Set the desired height */
+  overflow: hidden;
+  position: relative;
 }
