--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -1,9 +1,15 @@
+/* Define Color Palette */
+$primary: #3F3A36;    
+$secondary: #87C498;  
+$tertiary: #DDD1A9;   
+
 .profile-view {
   padding: 20px;
 
   h2,
   h3 {
     text-align: center;
+    color: $primary; /* Use primary color for headings */
   }
 
   .mb-4 {
@@ -12,6 +18,8 @@
 
   .text-danger {
     text-align: center;
-    color: red;
+    color: #D97C7C; /* You can keep this color for specific alerts */
   }
+
 }
+
