--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -14,3 +14,10 @@
   max-width: 200px;  /* Set a maximum width */
   height: auto;  /* Maintain the aspect ratio */
 }
+
+.custom-form-control {
+  border-color: #3F3A36;  /* Set the border color */
+  margin: 10px 0px 0px 0px;
+  width: auto;
+  box-shadow: 0 0 0 0.1rem #3F3A36;  /* Optional: add a shadow effect */
+}
