--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -5,6 +5,9 @@ $tertiary: #DDD1A9;
 
 .profile-view {
   padding: 20px;
+  background-color: $secondary;
+  margin-top: 20px;
+  margin-bottom: 20px;
 
   h2,
   h3 {
